🎖️ Admiral Rebrand — The Pair Has Arrived
Two masters. One fleet. One dollar.

⚓🧭 Admiral = Captain + m1 (the pair IS the product)
🏢 EOSE × Ernst & Young partnership across all surfaces
👥 crew.html — Meet the fleet (14 agents, full bios)
🔭 vision.html — 'In a pair, what a product'
📦 All 8 domains rebranded with pair identity
🎯 app.js — 32 NPs, full crew roster, $1-for-all
🧠 Portal v2 — Admiral Pair Hive Mind

If not us, then who? 🇨🇦🧅⚓🧭

--- a/app.html
+++ b/app.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Dashboard</title>
-<meta name="description" content="Your SERLF dashboard. All 12 products, all Novel Patterns, $1/mo.">
+<title>SERLF — Admiral Pair Dashboard</title>
+<meta name="description" content="Your SERLF dashboard. Admiral Pair + 13 products, 32+ Novel Patterns, $1/mo. EOSE × E&Y.">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo"><a href="#/" style="color:#fff;text-decoration:none">SERLF<span class="maple">🍁</span></a></div>
+<div class="logo"><a href="#/" style="color:#fff;text-decoration:none">⚓🧭 SERLF<span class="maple">🍁</span></a></div>
 <nav>
 <a href="#/" class="nav-link" data-page="home">Home</a>
 <a href="#/products" class="nav-link" data-page="products">Products</a>
 <a href="#/patterns" class="nav-link" data-page="patterns">Patterns</a>
+<a href="#/crew" class="nav-link" data-page="crew">Crew</a>
 <a href="#/academy" class="nav-link" data-page="academy">Academy</a>
 <a href="#/status" class="nav-link" data-page="status">Status</a>
 <a href="/dashboard.html" class="nav-link">Fleet Control</a>
@@ -26,13 +27,15 @@
 <div class="footer-inner">
 <div class="footer-links">
 <a href="/">serlf.ca</a>
+<a href="/crew.html">Crew</a>
+<a href="/vision.html">Vision</a>
 <a href="https://serlf.com">.com</a>
 <a href="https://serlf.org">.org</a>
 <a href="https://serlf.net">.net</a>
 <a href="/dashboard.html">Fleet Control</a>
 <a href="mailto:kewinjoffe@gmail.com">Contact</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Admiral Fleet Control · EOSE × E&Y · 🇨🇦 · $1/mo for everything</div>
 </div>
 </footer>
 
