--- a/club/index.html
+++ b/club/index.html
@@ -2,50 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — The SERLF Community</title>
-<meta name="description" content="SERLF Join the Fleet. Fleet Command, Community, Events. All for $1/month.">
+<title>SERLF — Community · Admiral Fleet Control</title>
+<meta name="description" content="SERLF community. Join the fleet. Alumni, mentors, crew. Powered by the Admiral Pair.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Join the Fleet</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Community</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club" class="active">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a><a href="https://serlf.club" class="active">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Join the Fleet</p>
-<h1>The SERLF Community.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Fleet Command, Community, Events.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 The Community</p>
+<h1>Join the fleet.<br>The Admiral Pair welcomes you.</h1>
+<p class="tagline">Alumni network, cohort spaces, mentorship. Where graduates become captains and captains become admirals.</p>
 <div class="flex-center mt-2">
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="https://serlf.ca/crew.html" class="btn btn-secondary">Meet the Crew</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
+<h2 class="section-title">Fleet Community</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
-</div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card"><div class="icon">🎓</div><h3>SERLF Academy Alumni</h3><p>Graduates who've launched their own fleets. Mentoring the next wave.</p></div>
+<div class="card"><div class="icon">⚓🧭</div><h3>Admiral Pair Office Hours</h3><p>Direct time with the dual-master fleet. Architecture reviews, pattern discovery.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Pattern Submissions</h3><p>Discover a Novel Pattern? Submit it. The community rates. The fleet evolves.</p></div>
 </div>
 </div>
 </section>
@@ -53,24 +39,17 @@
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
 <p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
+<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Community · by EOSE × E&Y · 🇨🇦 Canada<br><em>"Become the enterprise."</em></div>
 </div></footer>
 </body>
 </html>
