--- a/com/index.html
+++ b/com/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Enterprise AI for Teams</title>
-<meta name="description" content="SERLF For Teams & Organizations. Token Swarm, PEMOS, Fleet Control. All for $1/month.">
+<title>SERLF — Enterprise · EOSE × Ernst &amp; Young</title>
+<meta name="description" content="Enterprise AI sovereignty. EOSE × Ernst & Young joint delivery. Two principals: Kay J (human) + Admiral Pair (AI). $1 entry, custom consulting.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">For Teams & Organizations</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Enterprise</span></div>
 <nav>
 <a href="https://serlf.ca">.ca</a>
 <a href="https://serlf.com" class="active">.com</a>
@@ -21,46 +21,113 @@
 </nav>
 </div></header>
 
+<div style="text-align:center;padding:.6rem;background:linear-gradient(90deg,var(--bg2),var(--bg3),var(--bg2));border-bottom:1px solid var(--border)">
+<span style="font-size:.85rem;color:var(--gold);letter-spacing:.05em"><strong>EOSE × Ernst &amp; Young</strong> — Joint Delivery Model</span>
+</div>
+
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">For Teams & Organizations</p>
-<h1>Enterprise AI for Teams.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Token Swarm, PEMOS, Fleet Control.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Enterprise · Joint Delivery</p>
+<h1>Enterprise advisory<br>meets sovereign AI.</h1>
+<p class="tagline" style="font-size:1.3rem;margin-top:1rem">Two principals. Human architect + AI fleet. EOSE × Ernst &amp; Young.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Start at $1/mo</a>
+<a href="#consulting" class="btn btn-secondary">Enterprise Consulting</a>
 </div>
 </section>
 
+<!-- The Two Principals -->
+<section style="background:var(--bg2)">
+<div class="container">
+<h2 class="section-title">The Two Principals</h2>
+<p class="section-sub">Human expertise + AI sovereign fleet. Together they ARE the product.</p>
+<div class="grid grid-2" style="max-width:800px;margin:0 auto">
+<div class="card" style="text-align:center;border-color:var(--cyan)">
+<div style="font-size:3rem;margin-bottom:1rem">👤</div>
+<h3>Kay J</h3>
+<p style="color:var(--gold);font-size:.85rem">Human Principal · EOSE</p>
+<p style="margin-top:.75rem">15+ years enterprise architecture. TD Canada Trust. Canadian Tire. Westpac (Australia). Cloud landing zones, container platforms, security & compliance. The human who builds right.</p>
+</div>
+<div class="card" style="text-align:center;border-color:var(--gold)">
+<div style="font-size:3rem;margin-bottom:1rem">⚓🧭</div>
+<h3>Admiral Pair</h3>
+<p style="color:var(--gold);font-size:.85rem">AI Principal · Dual-Master Fleet</p>
+<p style="margin-top:.75rem">Captain (AKS, Canada Central) + m1 (GCP, Montreal). Two sovereign AI masters, 13+ fleet agents, 32+ Novel Patterns. The AI that ships.</p>
+</div>
+</div>
+</div>
+</section>
+
+<!-- E&Y Partnership -->
 <section>
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
+<h2 class="section-title">EOSE × Ernst &amp; Young</h2>
+<p class="section-sub">Enterprise advisory meets sovereign AI. Joint delivery for the real world.</p>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
-</div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card"><div class="icon">🤝</div><h3>Joint Delivery</h3><p>E&Y's enterprise advisory framework + EOSE's sovereign AI fleet. Human architects sit alongside AI agents. Best of both worlds.</p></div>
+<div class="card"><div class="icon">🎓</div><h3>SERLF Academy</h3><p>Co-developed courses. Learn sovereign enterprise patterns from human experts and the Admiral fleet. Reinforcement learning for real.</p></div>
+<div class="card"><div class="icon">🏛️</div><h3>Enterprise Consulting</h3><p>Cloud architecture, container platforms, AI strategy, security & compliance. Human + AI delivery teams.</p></div>
 </div>
 </div>
 </section>
 
-<section style="background:var(--bg2)">
-<div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
+<!-- Case Studies -->
+<section id="consulting" style="background:var(--bg2)">
+<div class="container">
+<h2 class="section-title">Enterprise Track Record</h2>
+<p class="section-sub">15+ years of shipping enterprise transformations.</p>
+<div class="grid grid-3">
+<div class="card">
+<div class="icon">🏦</div>
+<h3>TD Canada Trust</h3>
+<p style="color:var(--gold);font-size:.8rem;margin-bottom:.5rem">Financial Services · Canada</p>
+<p>Enterprise cloud architecture, container platforms, DevOps transformation. One of Canada's Big Five banks.</p>
+<div class="tag">CASE STUDY</div>
+</div>
+<div class="card">
+<div class="icon">🛒</div>
+<h3>Canadian Tire</h3>
+<p style="color:var(--gold);font-size:.8rem;margin-bottom:.5rem">Retail · Canada</p>
+<p>Cloud landing zones, platform engineering, enterprise integration. National retail transformation.</p>
+<div class="tag">CASE STUDY</div>
+</div>
+<div class="card">
+<div class="icon">🏦</div>
+<h3>Westpac</h3>
+<p style="color:var(--gold);font-size:.8rem;margin-bottom:.5rem">Financial Services · Australia</p>
+<p>International enterprise delivery. Cloud strategy, security architecture, compliance frameworks.</p>
+<div class="tag">CASE STUDY</div>
+</div>
+</div>
+</div>
+</section>
+
+<!-- Pricing -->
+<section>
+<div class="container">
+<h2 class="section-title">Enterprise Pricing</h2>
+<p class="section-sub">Start at $1. Scale with consulting.</p>
+<div class="grid grid-2" style="max-width:800px;margin:0 auto">
+<div class="pricing-box">
+<h3 style="color:var(--fg);margin-bottom:1rem">Platform Access</h3>
+<div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
+<p style="color:var(--fg2);margin-top:.5rem">All 12 products. Admiral Pair. 32+ NPs. Everything. No tiers.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Get Started</a>
+</div>
+<div class="pricing-box" style="border-color:var(--cyan)">
+<h3 style="color:var(--fg);margin-bottom:1rem">Enterprise Consulting</h3>
+<div style="font-size:2rem;font-weight:900;color:var(--cyan)">Custom</div>
+<p style="color:var(--fg2);margin-top:.5rem">EOSE × E&Y joint delivery. Human architects + AI fleet. Cloud, containers, security, AI strategy.</p>
+<a href="mailto:kewinjoffe@gmail.com" class="btn btn-secondary" style="width:100%;margin-top:1.5rem">Contact Us</a>
+</div>
+</div>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
 <a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/crew.html">Crew</a>
+<a href="https://serlf.ca/vision.html">Vision</a>
 <a href="https://serlf.ca/app.html">Dashboard</a>
 <a href="https://serlf.com">.com</a>
 <a href="https://serlf.org">.org</a>
@@ -70,7 +137,7 @@
 <a href="https://serlf.shop">.shop</a>
 <a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Enterprise · EOSE × Ernst &amp; Young · 🇨🇦 Canada<br><em>"Become the enterprise."</em></div>
 </div></footer>
 </body>
 </html>
