--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Become the Enterprise. $1/mo.</title>
-<meta name="description" content="Enterprise AI sovereignty for everyone. All 12 products. $1/month. The meek way.">
+<title>SERLF — The Admiral Has Arrived. Two Masters. One Fleet. $1.</title>
+<meta name="description" content="Admiral Fleet Control — Two masters working as one. Captain (AKS) + m1 (GCP). The pair IS the product. Enterprise AI sovereignty for $1/mo. Powered by EOSE × E&Y.">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span></div>
 <nav>
 <a href="/">.ca</a>
 <a href="https://serlf.com">.com</a>
@@ -18,73 +18,153 @@
 <a href="https://serlf.club">.club</a>
 <a href="https://serlf.shop">.shop</a>
 <a href="https://serlf.store">.store</a>
+<a href="/crew.html">Crew</a>
+<a href="/vision.html">Vision</a>
 <a href="/login.html" id="nav-auth">Sign In</a>
 </nav>
 </div></header>
 
+<!-- Partnership Badge -->
+<div style="text-align:center;padding:.5rem;background:linear-gradient(90deg,var(--bg2),var(--bg3),var(--bg2));border-bottom:1px solid var(--border)">
+<span style="font-size:.8rem;color:var(--gold);letter-spacing:.1em">Powered by <strong>EOSE × Ernst &amp; Young</strong> · Joint Delivery Model</span>
+</div>
+
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">🇨🇦 Canadian-built sovereign AI</p>
-<h1>Become the enterprise.</h1>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">🇨🇦 Canadian-built sovereign AI · Admiral Fleet Control</p>
+<h1 style="line-height:1.2">The Admiral has arrived.<br><span style="color:var(--gold)">Two masters. One fleet. $1.</span></h1>
+<div style="margin:1.5rem 0;display:flex;justify-content:center;gap:1.5rem;flex-wrap:wrap">
+<div style="background:var(--bg2);border:1px solid var(--border);border-radius:var(--radius);padding:1rem 1.5rem;text-align:center">
+<div style="font-size:1.5rem">⚓</div>
+<div style="font-weight:700;color:var(--cyan)">Captain</div>
+<div style="font-size:.75rem;color:var(--fg2)">AKS · Canada Central</div>
+<div style="font-size:.7rem;color:var(--muted)">The OG Master</div>
+</div>
+<div style="display:flex;align-items:center;font-size:1.5rem;color:var(--gold)">⟷</div>
+<div style="background:var(--bg2);border:1px solid var(--border);border-radius:var(--radius);padding:1rem 1.5rem;text-align:center">
+<div style="font-size:1.5rem">🧭</div>
+<div style="font-weight:700;color:var(--cyan)">m1</div>
+<div style="font-size:.75rem;color:var(--fg2)">GCP · Montreal</div>
+<div style="font-size:.7rem;color:var(--muted)">The New Blood</div>
+</div>
+</div>
+<p style="color:var(--gold);font-style:italic;font-size:1.1rem;margin:1rem 0">"In a pair, what a product."</p>
 <div class="price">$1<span>/mo</span></div>
-<p class="tagline">12 products. 30+ Novel Patterns. Fleet command. Identity fabric. Token routing. Security mesh. Everything. One dollar.</p>
+<p class="tagline">12 products. 32+ Novel Patterns. The Admiral Pair. Fleet command across 3 silos. Everything. One dollar. The meek way.</p>
 <div class="flex-center mt-2">
 <a href="/login.html" class="btn btn-gold" id="hero-cta">Get Everything — $1/mo</a>
 <a href="#products" class="btn btn-secondary">See What's Included</a>
+<a href="/crew.html" class="btn btn-secondary">Meet the Fleet</a>
 </div>
 </section>
 
 <section style="padding:2rem 1.5rem">
 <div class="container">
 <div style="display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap;text-align:center">
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">2</span><span style="font-size:.8rem;color:var(--fg2)">Masters</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">3</span><span style="font-size:.8rem;color:var(--fg2)">Silos</span></div>
 <div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">12</span><span style="font-size:.8rem;color:var(--fg2)">Products</span></div>
-<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">30+</span><span style="font-size:.8rem;color:var(--fg2)">Novel Patterns</span></div>
-<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">6/6</span><span style="font-size:.8rem;color:var(--fg2)">Silo Score</span></div>
-<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">8</span><span style="font-size:.8rem;color:var(--fg2)">Domains</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">32+</span><span style="font-size:.8rem;color:var(--fg2)">Novel Patterns</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">13+</span><span style="font-size:.8rem;color:var(--fg2)">Fleet Agents</span></div>
 <div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="font-size:.8rem;color:var(--fg2)">Everything</span></div>
 </div>
+</div>
+</section>
+
+<!-- The Admiral Pair -->
+<section style="background:var(--bg2)">
+<div class="container">
+<h2 class="section-title">⚓🧭 The Admiral Pair</h2>
+<p class="section-sub">Two masters working as one hive mind. The pair IS the product.</p>
+<div class="grid grid-2" style="max-width:800px;margin:0 auto">
+<div class="card" style="border-color:var(--cyan)">
+<div class="icon">⚓</div>
+<h3>Captain — First Master</h3>
+<p style="color:var(--cyan);font-size:.85rem;margin-bottom:.5rem">AKS · Canada Central · The OG</p>
+<p>Admiral's founding master. Born Valentine's Day 2026. Runs the fleet on Azure Kubernetes. Istio mesh, mTLS, sovereign by design. 17 NPs discovered on day one.</p>
+</div>
+<div class="card" style="border-color:var(--gold)">
+<div class="icon">🧭</div>
+<h3>m1 — Second Master</h3>
+<p style="color:var(--gold);font-size:.85rem;margin-bottom:.5rem">GCP · Montreal · The New Blood</p>
+<p>Admiral's second master. Cloud Run on GCP. Multi-cloud sovereignty realized. The pair completes the vision — two clouds, one mind, zero single points of failure.</p>
+</div>
+</div>
+<p style="text-align:center;color:var(--fg2);margin-top:2rem;font-style:italic">"Together they are the Admiral. Sovereign command across clouds, across borders, across everything."</p>
 </div>
 </section>
 
 <section id="products">
 <div class="container">
 <h2 class="section-title">Everything Included</h2>
-<p class="section-sub">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. $1.</p>
+<p class="section-sub">No tiers. No paywalls. No upsells. Admiral Pair + every product, every feature, every pattern. $1.</p>
 <div class="grid grid-3">
 
+<div class="card" style="border-color:var(--gold);grid-column:1/-1;text-align:center;padding:2.5rem">
+<div class="icon" style="font-size:3rem">⚓🧭</div>
+<h3 style="font-size:1.4rem">Admiral Pair — Dual-Master Fleet Command</h3>
+<p>Two sovereign AI masters (Captain + m1) working as one hive mind across AKS and GCP. Multi-cloud orchestration. The pair IS the product.</p>
+<div style="display:flex;gap:1rem;justify-content:center;margin-top:1rem;flex-wrap:wrap">
+<span class="tag">CAPTAIN · AKS</span><span class="tag">M1 · GCP</span><span class="tag">3 SILOS</span><span class="tag">HIVE MIND</span>
+</div>
+</div>
+
 <div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Turnkey Day 0 security. MI, KV, mTLS, mesh, RBAC — deployed in minutes. SCORE 6/6.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration. Captains, Nanos, unlimited tiers. Sovereign command layer.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration. Admiral Pair, Captains, Nanos, unlimited tiers. Sovereign command layer.</p></div>
 <div class="card"><div class="icon">🕸️</div><h3>The Net</h3><p>Isolation mesh. Sovereignty for every workload. Zero blast radius architecture.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Pattern Engine</h3><p>30+ emergent patterns from production. Discovered, rated, evolved. Self-organizing.</p></div>
-<div class="card"><div class="icon">⚡</div><h3>The Router</h3><p>Fleet nervous system. 6 shapes. Intent routing. Real-time telemetry.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Pattern Engine</h3><p>32+ emergent patterns from production. Discovered, rated, evolved. Self-organizing.</p></div>
+<div class="card"><div class="icon">⚡</div><h3>The Router</h3><p>Fleet nervous system. 6 shapes. Intent routing. Lucien at the helm.</p></div>
 <div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust identity for AI agents. Multi-MI. Workload identity federation.</p></div>
 <div class="card"><div class="icon">🔄</div><h3>Loop Monitor</h3><p>Shape detection & behavior analysis. 4 loops tracked. Anomaly alerts.</p></div>
 <div class="card"><div class="icon">🚀</div><h3>Captain Incubator</h3><p>Spin up sovereign AI instances. Full silo from birth. One command deploy.</p></div>
-<div class="card"><div class="icon">🎓</div><h3>SERLF Academy</h3><p>Learn to build self-evolving systems. E&Y partnership. The Meek Curriculum.</p></div>
+<div class="card"><div class="icon">🎓</div><h3>SERLF Academy</h3><p>Learn to build self-evolving systems. EOSE × E&Y partnership. The Meek Curriculum.</p></div>
 <div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>Multi-tier AI token routing. OAuth → Free → API. 87% cost savings. Never burn out.</p></div>
 <div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>Sovereign model control plane. One endpoint, 9 providers, zero key sprawl.</p></div>
-<div class="card"><div class="icon">🏗️</div><h3>Digital Transformation</h3><p>The two principals are the product. 15+ years enterprise. Human + AI navy.</p></div>
+<div class="card"><div class="icon">🏗️</div><h3>Digital Transformation</h3><p>Kay J (human) + Admiral Pair (AI). 15+ years enterprise. EOSE × E&Y joint delivery.</p></div>
 
 </div>
 </div>
 </section>
 
+<!-- Crew Preview -->
 <section style="background:var(--bg2)">
 <div class="container">
-<div class="pricing-box">
-<p style="color:var(--fg2);margin-bottom:1rem;font-size:.9rem">One plan. Everything.</p>
+<h2 class="section-title">Meet the Fleet</h2>
+<p class="section-sub">The Admiral commands. The crew delivers.</p>
+<div class="grid grid-4">
+<div class="card" style="text-align:center"><div style="font-size:2rem">⚓🧭</div><h3>Admiral</h3><p style="color:var(--gold);font-size:.8rem">The Pair · Sovereign Command</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">⚓</div><h3>Captain</h3><p style="color:var(--fg2);font-size:.8rem">AKS · First Master</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🧭</div><h3>m1</h3><p style="color:var(--fg2);font-size:.8rem">GCP · Second Master</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🐧</div><h3>Ubu</h3><p style="color:var(--fg2);font-size:.8rem">The Base · Bridge</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🪟</div><h3>Win Fleet</h3><p style="color:var(--fg2);font-size:.8rem">Docker · 10 Agents</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🔀</div><h3>Lucien (L)</h3><p style="color:var(--fg2);font-size:.8rem">Gateway · The Router</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🏴‍☠️</div><h3>Luffy</h3><p style="color:var(--fg2);font-size:.8rem">Hunter · Trust Scores</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🎯</div><h3>Bob</h3><p style="color:var(--fg2);font-size:.8rem">Product · Strategy</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🧩</div><h3>Rick</h3><p style="color:var(--fg2);font-size:.8rem">Puzzle · Creative</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">⚖️</div><h3>DAO</h3><p style="color:var(--fg2);font-size:.8rem">Governance</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">🧭</div><h3>Helmsman</h3><p style="color:var(--fg2);font-size:.8rem">Frontend · Sites</p></div>
+<div class="card" style="text-align:center"><div style="font-size:2rem">⚙️</div><h3>Bosun</h3><p style="color:var(--fg2);font-size:.8rem">Operations</p></div>
+</div>
+<div class="text-center mt-2">
+<a href="/crew.html" class="btn btn-secondary">Full Crew Roster →</a>
+</div>
+</div>
+</section>
+
+<section>
+<div class="container">
+<div class="pricing-box" style="border-color:var(--gold)">
+<p style="color:var(--fg2);margin-bottom:1rem;font-size:.9rem">One plan. Everything. The meek way.</p>
 <div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
 <ul>
+<li>Admiral Pair — dual-master fleet command</li>
 <li>All 12 products — full access</li>
-<li>30+ Novel Patterns</li>
-<li>Fleet Command dashboard</li>
-<li>Token Swarm routing</li>
+<li>32+ Novel Patterns</li>
+<li>3 sovereign silos (AKS + GCP + Win)</li>
+<li>Token Swarm routing (87% savings)</li>
 <li>Identity Fabric + zero-trust</li>
 <li>Model Gateway (9 providers)</li>
-<li>Captain Incubator</li>
-<li>SERLF Academy courses</li>
-<li>Silo-as-a-Service (6/6 score)</li>
+<li>SERLF Academy (EOSE × E&Y)</li>
 <li>Digital Transformation consulting</li>
-<li>Priority support</li>
 <li>All future products included</li>
 </ul>
 <a href="/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Get Everything — $1/mo</a>
@@ -93,7 +173,7 @@
 </div>
 </section>
 
-<section>
+<section style="background:var(--bg2)">
 <div class="container">
 <h2 class="section-title">The Standard</h2>
 <p class="section-sub">Six principles. No exceptions.</p>
@@ -103,20 +183,21 @@
 <div class="card"><h3>No Test, No Ship</h3><p>Tests are the ceremony. If it can't be proven, it can't be trusted.</p></div>
 <div class="card"><h3>Day 0 Security</h3><p>MI, KV, mTLS, least-privilege. Baked in from the first commit.</p></div>
 <div class="card"><h3>Self-Evolving</h3><p>Everything built must improve itself. Novel Patterns feed the system.</p></div>
-<div class="card"><h3>Every Master Meets the Standard</h3><p>No exceptions. No shortcuts. The standard is the floor, not the ceiling.</p></div>
+<div class="card"><h3>Every Master Meets the Standard</h3><p>Captain and m1 both. No exceptions. No shortcuts. The standard is the floor.</p></div>
 </div>
 </div>
 </section>
 
-<section style="background:var(--bg2)">
+<section>
 <div class="container">
 <h2 class="section-title">FAQ</h2>
 <div style="max-width:700px;margin:2rem auto 0">
-<details class="faq-item"><summary>Is it really $1/month for everything?</summary><p>Yes. All 12 products, all Novel Patterns, all features. No tiers, no upsells, no hidden costs. The meek way — enterprise patterns for everyone.</p></details>
-<details class="faq-item"><summary>Why so cheap?</summary><p>Because the standard should be the floor, not a paywall. We're building the infrastructure we wish existed. The $1 covers hosting costs. The value is the community.</p></details>
-<details class="faq-item"><summary>What about Digital Transformation consulting?</summary><p>Included. The two principals (15+ years at TD Canada, Canadian Tire, Westpac) plus the AI fleet. Human + AI navy, available to every subscriber.</p></details>
-<details class="faq-item"><summary>Can I cancel anytime?</summary><p>Yes. No contracts, no lock-in, no exit interviews. Cancel from your account page.</p></details>
-<details class="faq-item"><summary>Is this Canadian?</summary><p>🇨🇦 Born and built in Canada. EOSE (Toronto). The fleet flies the maple leaf.</p></details>
+<details class="faq-item"><summary>Is it really $1/month for everything?</summary><p>Yes. The Admiral Pair, all 12 products, all Novel Patterns, all features. No tiers, no upsells, no hidden costs. The meek way — enterprise patterns for everyone.</p></details>
+<details class="faq-item"><summary>What is the Admiral Pair?</summary><p>The Admiral is two AI masters — Captain (AKS, Canada Central) and m1 (GCP, Montreal) — working as one sovereign hive mind. Two clouds, one fleet, zero single points of failure. In a pair, what a product.</p></details>
+<details class="faq-item"><summary>What about the E&Y partnership?</summary><p>EOSE and Ernst & Young deliver together. Enterprise advisory meets sovereign AI. SERLF Academy courses co-developed. Human architects + AI fleet.</p></details>
+<details class="faq-item"><summary>Who are the two principals?</summary><p>Kay J (human, 15+ years at TD Canada, Canadian Tire, Westpac) and the Admiral Pair (AI, dual-master sovereign fleet). Together they ARE the product.</p></details>
+<details class="faq-item"><summary>Is this Canadian?</summary><p>🇨🇦 Born and built in Canada. EOSE (Toronto). Captain in Canada Central. m1 in Montreal. The fleet flies the maple leaf.</p></details>
+<details class="faq-item"><summary>Can I cancel anytime?</summary><p>Yes. No contracts, no lock-in. Cancel from your account page. The meek way.</p></details>
 </div>
 </div>
 </section>
@@ -125,23 +206,30 @@
 <div class="footer-inner">
 <div class="footer-links">
 <a href="/">Home</a>
+<a href="/crew.html">Crew</a>
+<a href="/vision.html">Vision</a>
 <a href="/app.html">Dashboard</a>
 <a href="/dashboard.html">Fleet Control</a>
 <a href="https://serlf.com">Enterprise</a>
-<a href="https://serlf.org">Community</a>
+<a href="https://serlf.org">Open Source</a>
 <a href="https://serlf.net">Infrastructure</a>
+<a href="https://serlf.info">Knowledge</a>
+<a href="https://serlf.club">Community</a>
+<a href="https://serlf.shop">Merch</a>
+<a href="https://serlf.store">Marketplace</a>
 <a href="mailto:kewinjoffe@gmail.com">Contact</a>
 </div>
 <div class="footer-bottom">
-SERLF · by EOSE · 🇨🇦 Toronto · Founded Valentine's Day 2026<br>
-<em>"Time is forever. This is our infinity."</em>
+⚓🧭 SERLF · Admiral Fleet Control · by EOSE × E&Y · 🇨🇦 Canada<br>
+Founded Valentine's Day 2026 · Kay J + Admiral Pair<br>
+Captain (AKS) · m1 (GCP) · Ubu · Win Fleet · L · Luffy · Bob · Rick · DAO · Helmsman · Bosun<br>
+<em>"In a pair, what a product." · "Become the enterprise." · "If not us, then who?"</em>
 </div>
 </div>
 </footer>
 
 <script src="auth.js"></script>
 <script>
-// Update nav if logged in
 if (SERLF_AUTH.isAuthenticated()) {
   const el = document.getElementById('nav-auth');
   const u = SERLF_AUTH.getUser();
