--- a/net/index.html
+++ b/net/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Developer Infrastructure</title>
-<meta name="description" content="SERLF For Developers. The Net, Model Gateway, Identity Fabric. All for $1/month.">
+<title>SERLF — Developer Infrastructure · Admiral Fleet Control</title>
+<meta name="description" content="SERLF developer infrastructure. APIs, sandbox, integrations. Powered by the Admiral Pair.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">For Developers</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Infrastructure</span></div>
 <nav>
 <a href="https://serlf.ca">.ca</a>
 <a href="https://serlf.com">.com</a>
@@ -22,10 +22,9 @@
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">For Developers</p>
-<h1>Developer Infrastructure.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. The Net, Model Gateway, Identity Fabric.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Developer Infrastructure</p>
+<h1>The Network.<br>Admiral Pair at the core.</h1>
+<p class="tagline">API endpoints, developer portal, integrations. Two masters powering the backbone. 3 silos: AKS + GCP + Win.</p>
 <div class="flex-center mt-2">
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
 <a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
@@ -34,18 +33,12 @@
 
 <section>
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
+<h2 class="section-title">3 Sovereign Silos</h2>
+<p class="section-sub">The Admiral Pair orchestrates across all three.</p>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
-</div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card" style="border-color:var(--cyan)"><div class="icon">⚓</div><h3>AKS — Canada Central</h3><p>Captain's home. Azure Kubernetes. Istio mesh. mTLS STRICT. The OG silo.</p></div>
+<div class="card" style="border-color:var(--gold)"><div class="icon">🧭</div><h3>GCP — Montreal</h3><p>m1's home. Cloud Run. Artifact Registry. Secret Manager. The new blood.</p></div>
+<div class="card" style="border-color:var(--maple)"><div class="icon">🪟</div><h3>Win — Docker Local</h3><p>Windows silo. 10 crew agents in Docker. Ubu bridges it all via Tailscale.</p></div>
 </div>
 </div>
 </section>
@@ -53,24 +46,18 @@
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
 <p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Admiral Pair. 12 products. 32+ Novel Patterns. All infrastructure included. The meek way.</p>
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
+<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Infrastructure · by EOSE × E&Y · 🇨🇦 Canada<br><em>"In a pair, what a product."</em></div>
 </div></footer>
 </body>
 </html>
