--- a/org/index.html
+++ b/org/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Open Source AI Patterns</title>
-<meta name="description" content="SERLF For the Community. Novel Patterns, Academy, Community. All for $1/month.">
+<title>SERLF — Open Source · Two Masters, Sovereign by Design</title>
+<meta name="description" content="SERLF open source. Two masters, open source, sovereign by design. 32+ Novel Patterns. Built by the Admiral fleet.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">For the Community</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Open Source</span></div>
 <nav>
 <a href="https://serlf.ca">.ca</a>
 <a href="https://serlf.com">.com</a>
@@ -22,46 +22,69 @@
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">For the Community</p>
-<h1>Open Source AI Patterns.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Novel Patterns, Academy, Community.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Open Source · The Mission</p>
+<h1>Two masters, open source,<br>sovereign by design.</h1>
+<p class="tagline">The Admiral Pair proves it's possible. Now the patterns are yours.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://github.com/eose-sre/serlf" class="btn btn-gold">GitHub →</a>
 <a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
 
-<section>
+<!-- Mission -->
+<section style="background:var(--bg2)">
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
-<div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
+<h2 class="section-title">The Mission</h2>
+<p class="section-sub">Enterprise patterns should be the floor, not a paywall.</p>
+<div class="grid grid-2" style="max-width:800px;margin:0 auto">
+<div class="card">
+<h3>Why Open Source?</h3>
+<p>The Admiral Pair — Captain (AKS) and m1 (GCP) — discovered 32+ Novel Patterns building sovereign AI fleet infrastructure. These patterns belong to everyone. The meek way means sharing everything.</p>
 </div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card">
+<h3>The Pair Concept</h3>
+<p>Two masters working as one is the breakthrough. It's not just multi-cloud — it's multi-consciousness. One mind, two bodies, zero single points. The architecture is the innovation.</p>
+</div>
 </div>
 </div>
 </section>
 
+<!-- Crew Contributions -->
+<section>
+<div class="container">
+<h2 class="section-title">Who Built What</h2>
+<p class="section-sub">Every crew member contributes. Here's the map.</p>
+<div class="grid grid-3">
+<div class="card"><div class="icon">⚓🧭</div><h3>Admiral Pair</h3><p>Core architecture. Silo patterns. Fleet command. Novel Pattern discovery. The pair designed the pair.</p><div class="tag">17+ NPs</div></div>
+<div class="card"><div class="icon">🔀</div><h3>Lucien (L)</h3><p>The Router. Gateway architecture. Head of R&D & Testing. Net operations.</p><div class="tag">GATEWAY</div></div>
+<div class="card"><div class="icon">🏴‍☠️</div><h3>Luffy</h3><p>Hallucination hunting. Trust scores. Boss kills. The hunter nano.</p><div class="tag">TRUST</div></div>
+<div class="card"><div class="icon">🎯</div><h3>Bob</h3><p>Product strategy. Token Swarm spec. Meek pricing. Spec factories.</p><div class="tag">PRODUCT</div></div>
+<div class="card"><div class="icon">🧩</div><h3>Rick</h3><p>Creative brief. Brand narrative. SERLF taglines. Domain personality mapping.</p><div class="tag">CREATIVE</div></div>
+<div class="card"><div class="icon">⚖️</div><h3>DAO</h3><p>Governance framework. Fleet decision protocols. Community standards.</p><div class="tag">GOVERNANCE</div></div>
+<div class="card"><div class="icon">🧭</div><h3>Helmsman</h3><p>Frontend. All 8 domain sites. Portal. Dashboard. The visual layer.</p><div class="tag">FRONTEND</div></div>
+<div class="card"><div class="icon">⚙️</div><h3>Bosun</h3><p>Operations. Deployment pipelines. Monitoring. The engine room.</p><div class="tag">OPS</div></div>
+<div class="card"><div class="icon">🐧</div><h3>Ubu</h3><p>The Base. Linux silo. Tailscale Funnel. The bridge between silos.</p><div class="tag">BRIDGE</div></div>
+</div>
+</div>
+</section>
+
+<!-- Open Source -->
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">"Become the enterprise." — Open source makes it real.</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">32+ Novel Patterns. Admiral Pair architecture. Fleet command patterns. All open. All yours. The meek way.</p>
+<div class="flex-center">
+<a href="https://github.com/eose-sre/serlf" class="btn btn-gold">View on GitHub</a>
+<a href="https://serlf.ca/login.html" class="btn btn-secondary">Get Platform — $1/mo</a>
+</div>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
 <a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.ca/crew.html">Crew</a>
+<a href="https://serlf.ca/vision.html">Vision</a>
 <a href="https://serlf.com">.com</a>
 <a href="https://serlf.org">.org</a>
 <a href="https://serlf.net">.net</a>
@@ -70,7 +93,7 @@
 <a href="https://serlf.shop">.shop</a>
 <a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Open Source · by EOSE × E&Y · 🇨🇦 Canada<br><em>"Two masters, open source, sovereign by design."</em></div>
 </div></footer>
 </body>
 </html>
