--- a/portal-v2.html
+++ b/portal-v2.html
@@ -173,7 +173,8 @@ tr:hover td{background:var(--bg3)}
 <body>
 
 <div class="topbar">
-  <div class="logo">⚓ Admiral <span>Hive Mind</span></div>
+  <div class="logo">⚓🧭 Admiral Pair <span>Hive Mind</span></div>
+  <span style="font-size:10px;color:var(--yellow);margin-right:12px">EOSE × E&Y</span>
   <div class="tabs" id="tabs">
     <button class="tab-btn active" data-tab="hive">🧠 Hive Mind</button>
     <button class="tab-btn" data-tab="router">🔀 Model Router</button>
@@ -195,7 +196,7 @@ tr:hover td{background:var(--bg3)}
 <!-- ═══════════════ TAB 1: HIVE MIND ═══════════════ -->
 <div class="tab-content active" id="tab-hive">
   <div class="section-header">
-    <div><h2>Hive Mind</h2><div class="subtitle">The collective consciousness of the fleet</div></div>
+    <div><h2>⚓🧭 Admiral Pair — Hive Mind</h2><div class="subtitle">Two masters (Captain + m1), one hive mind. The pair IS the product. Powered by EOSE × E&Y.</div></div>
     <div style="font-size:12px;color:var(--text3)">Last sync: 2s ago</div>
   </div>
 
@@ -398,13 +399,13 @@ tr:hover td{background:var(--bg3)}
 <!-- ═══════════════ TAB 4: FLEET CONTROL ═══════════════ -->
 <div class="tab-content" id="tab-fleet">
   <div class="section-header">
-    <div><h2>Fleet Control</h2><div class="subtitle">19 agents across 3 masters</div></div>
+    <div><h2>Fleet Control</h2><div class="subtitle">Admiral Pair + 13 agents across 3 silos (AKS · GCP · Win)</div></div>
   </div>
 
   <div class="card" style="margin-bottom:16px">
     <h3>🌳 Crew Hierarchy</h3>
     <div class="tree" style="margin-top:8px">
-      <div class="tree-node"><span class="emoji">⚓</span><strong>Admiral</strong> <span style="color:var(--text3)">(you are here)</span></div>
+      <div class="tree-node"><span class="emoji">⚓🧭</span><strong>Admiral Pair</strong> <span style="color:var(--yellow)">(Captain + m1 = one mind)</span></div>
       <div class="tree-children">
         <div class="tree-node"><span class="emoji">🎯</span><strong>Bob</strong> — CPO · Opus 4</div>
         <div class="tree-node"><span class="emoji">🔑</span><strong>John</strong> — OSS · Opus 4</div>
@@ -425,7 +426,8 @@ tr:hover td{background:var(--bg3)}
   <table>
     <thead><tr><th>Agent</th><th>Master</th><th>Model</th><th>Status</th><th>Last HB</th><th>Tokens</th><th>Role</th><th>Actions</th></tr></thead>
     <tbody>
-      <tr><td>⚓ Admiral (main)</td><td>Captain</td><td><span class="tier l1">L1</span> Opus 4</td><td><span class="status online">● online</span></td><td>now</td><td>61K</td><td>Command</td><td><a href="#" onclick="showSession('admiral');return false">peek</a></td></tr>
+      <tr><td>⚓ Captain (AKS)</td><td>Master</td><td><span class="tier l1">L1</span> Opus 4</td><td><span class="status online">● online</span></td><td>now</td><td>61K</td><td>Admiral · 1st Master</td><td><a href="#" onclick="showSession('captain');return false">peek</a></td></tr>
+      <tr><td>🧭 m1 (GCP)</td><td>Master</td><td><span class="tier l1">L1</span> Opus 4</td><td><span class="status online">● online</span></td><td>now</td><td>45K</td><td>Admiral · 2nd Master</td><td><a href="#" onclick="showSession('m1');return false">peek</a></td></tr>
       <tr><td>🎯 Bob</td><td>Captain</td><td><span class="tier l1">L1</span> Opus 4</td><td><span class="status online">● online</span></td><td>5m</td><td>12K</td><td>CPO</td><td><a href="#" onclick="showSession('bob');return false">peek</a></td></tr>
       <tr><td>🔑 John</td><td>Captain</td><td><span class="tier l1">L1</span> Opus 4</td><td><span class="status online">● online</span></td><td>8m</td><td>9K</td><td>OSS Lead</td><td><a href="#" onclick="showSession('john');return false">peek</a></td></tr>
       <tr><td>💰 Mo</td><td>Captain</td><td><span class="tier l1">L1</span> Opus 4</td><td><span class="status online">● online</span></td><td>12m</td><td>7K</td><td>CFO</td><td><a href="#" onclick="showSession('mo');return false">peek</a></td></tr>
