--- a/shop/index.html
+++ b/shop/index.html
@@ -2,30 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — SERLF Merch & Tools</title>
-<meta name="description" content="SERLF Gear Up. CLI Tools, Templates, Merch. All for $1/month.">
+<title>SERLF — Merch &amp; Tools · Admiral Fleet Control</title>
+<meta name="description" content="SERLF merch. Admiral Pair gear, fleet hoodies, sovereign stickers.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Gear Up</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Merch</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop" class="active">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop" class="active">.shop</a><a href="https://serlf.store">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Gear Up</p>
-<h1>SERLF Merch & Tools.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. CLI Tools, Templates, Merch.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Merch &amp; Tools</p>
+<h1>Wear the fleet.<br>⚓🧭 Admiral Pair gear.</h1>
+<p class="tagline">Hoodies, stickers, hardware kits. Rep the sovereign fleet. Canadian-made.</p>
 <div class="flex-center mt-2">
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
 <a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
@@ -34,18 +27,11 @@
 
 <section>
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
+<h2 class="section-title">Coming Soon</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
-</div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card" style="text-align:center"><div style="font-size:3rem">👕</div><h3>"SELF + RL = SERLF" Hoodie</h3><p>Navy dark. Maple leaf. The formula on the back.</p><div class="tag">COMING SOON</div></div>
+<div class="card" style="text-align:center"><div style="font-size:3rem">⚓🧭</div><h3>Admiral Pair Sticker Pack</h3><p>Captain + m1. Dual icons. Laptop-ready.</p><div class="tag">COMING SOON</div></div>
+<div class="card" style="text-align:center"><div style="font-size:3rem">🍁</div><h3>"In a pair, what a product" Tee</h3><p>The tagline that started it all.</p><div class="tag">COMING SOON</div></div>
 </div>
 </div>
 </section>
@@ -53,24 +39,17 @@
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
 <p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
+<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Merch · by EOSE × E&Y · 🇨🇦 Canada<br><em>"In a pair, what a product."</em></div>
 </div></footer>
 </body>
 </html>
