--- a/store/index.html
+++ b/store/index.html
@@ -2,30 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Digital Products</title>
-<meta name="description" content="SERLF Digital Arsenal. Captain Templates, Helm Charts, API Access. All for $1/month.">
+<title>SERLF — Digital Marketplace · Admiral Fleet Control</title>
+<meta name="description" content="SERLF digital marketplace. Agent blueprints, sandbox environments, premium patterns. Built by the Admiral fleet.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Digital Arsenal</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Marketplace</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store" class="active">.store</a>
+<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store" class="active">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Digital Arsenal</p>
-<h1>Digital Products.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Captain Templates, Helm Charts, API Access.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Digital Marketplace</p>
+<h1>The economy.<br>Built by the fleet, for the fleet.</h1>
+<p class="tagline">Agent blueprints, sandbox environments, premium challenge packs. Graduates sell back to the ecosystem.</p>
 <div class="flex-center mt-2">
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
 <a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
@@ -34,18 +27,11 @@
 
 <section>
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
+<h2 class="section-title">Digital Goods</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
-</div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card"><div class="icon">🤖</div><h3>Agent Blueprints</h3><p>Pre-built agent templates. Fleet-tested. Sovereign by design. Deploy in minutes.</p><div class="tag">COMING SOON</div></div>
+<div class="card"><div class="icon">🏗️</div><h3>Sandbox Environments</h3><p>Pre-configured learning environments. SERLF Academy compatible.</p><div class="tag">COMING SOON</div></div>
+<div class="card"><div class="icon">🌀</div><h3>Premium Pattern Packs</h3><p>Deep-dive Novel Pattern implementations with full source and docs.</p><div class="tag">COMING SOON</div></div>
 </div>
 </div>
 </section>
@@ -53,24 +39,17 @@
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
 <p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
+<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Marketplace · by EOSE × E&Y · 🇨🇦 Canada<br><em>"Become the enterprise."</em></div>
 </div></footer>
 </body>
 </html>
