--- a/info/index.html
+++ b/info/index.html
@@ -2,50 +2,39 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Knowledge & Documentation</title>
-<meta name="description" content="SERLF Learn Everything. Academy, Patterns, Architecture Docs. All for $1/month.">
+<title>SERLF — Knowledge &amp; Documentation · Admiral Fleet Control</title>
+<meta name="description" content="SERLF knowledge base. 32+ Novel Patterns, fleet architecture, the Admiral Pair explained.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Learn Everything</span></div>
+<div class="logo">⚓🧭 SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Knowledge</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info" class="active">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a>
+<a href="https://serlf.info" class="active">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Learn Everything</p>
-<h1>Knowledge & Documentation.<br>Without the Enterprise Price.</h1>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Academy, Patterns, Architecture Docs.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Knowledge &amp; Documentation</p>
+<h1>The Library.<br>32+ Novel Patterns and counting.</h1>
+<p class="tagline">Research, case studies, architecture docs. Everything the Admiral Pair has discovered, documented.</p>
 <div class="flex-center mt-2">
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
-<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+<a href="https://serlf.ca/vision.html" class="btn btn-secondary">Read the Vision</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Become the enterprise.</h2>
-<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
+<h2 class="section-title">Featured Knowledge</h2>
 <div class="grid grid-3">
-<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
-<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
-<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
-<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
-<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
-<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
-</div>
-<div class="text-center mt-2">
-<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
+<div class="card"><div class="icon">⚓🧭</div><h3>The Admiral Pair</h3><p>Two masters, one hive mind. Captain (AKS) + m1 (GCP). Architecture deep dive.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>32+ Novel Patterns</h3><p>Every pattern discovered, rated, and documented. From Silo Audit to Self-Healing Fleet.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>Multi-tier AI token routing. OAuth intelligence. 87% cost savings explained.</p></div>
+<div class="card"><div class="icon">🔐</div><h3>Day 0 Security</h3><p>MI-KV pattern. mTLS mesh. 6/6 silo score methodology.</p></div>
+<div class="card"><div class="icon">🤝</div><h3>EOSE × E&Y Model</h3><p>How human enterprise advisory meets sovereign AI fleet delivery.</p></div>
+<div class="card"><div class="icon">📖</div><h3>The Meek Way</h3><p>Enterprise patterns for everyone. $1. The philosophy behind the price.</p></div>
 </div>
 </div>
 </section>
@@ -53,24 +42,17 @@
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
 <p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
 <a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">Home</a>
-<a href="https://serlf.ca/app.html">Dashboard</a>
-<a href="https://serlf.com">.com</a>
-<a href="https://serlf.org">.org</a>
-<a href="https://serlf.net">.net</a>
-<a href="https://serlf.info">.info</a>
-<a href="https://serlf.club">.club</a>
-<a href="https://serlf.shop">.shop</a>
-<a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">Home</a><a href="https://serlf.ca/crew.html">Crew</a><a href="https://serlf.ca/vision.html">Vision</a>
+<a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
 </div>
-<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Knowledge · by EOSE × E&Y · 🇨🇦 Canada<br><em>"In a pair, what a product."</em></div>
 </div></footer>
 </body>
 </html>
